# akuna

./: deliverables.md  deliverables_ai_programming.md  design.md
calendar_privacy_poc/: .gitignore  Cargo.toml  Makefile  README.md  WALKTHROUGH.md  leaky.toml  secure.toml
calendar_privacy_poc/host/: Cargo.toml  leaky.toml  secure.toml
calendar_privacy_poc/host/src/: calendar_impl.rs  cli.rs  lib.rs  main.rs
calendar_privacy_poc/host/tests/: security_tests.rs
calendar_privacy_poc/modules/calendar_reader/: Cargo.toml
calendar_privacy_poc/modules/calendar_reader/src/: lib.rs
calendar_privacy_poc/modules/context_analyzer/: Cargo.toml
calendar_privacy_poc/modules/context_analyzer/src/: lib.rs
calendar_privacy_poc/modules/leaky_agent/: Cargo.toml
calendar_privacy_poc/modules/leaky_agent/src/: lib.rs
calendar_privacy_poc/modules/llm_provider/: Cargo.toml
calendar_privacy_poc/modules/llm_provider/src/: lib.rs
calendar_privacy_poc/modules/matcher/: Cargo.toml
calendar_privacy_poc/modules/orchestrator/: Cargo.toml
calendar_privacy_poc/modules/web_searcher/: Cargo.toml
calendar_privacy_poc/wit/: calendar.wit
pypes/: .gitignore  CONTRACT_AGENT_GUIDE.md  Cargo.toml  README.md  REGISTRY.md  design_v2.md  developer_experience.md  remote_test.toml  safe_config.toml  test-server.py  unsafe_duo.toml  unsafe_trifecta.toml  workflow_test.toml
pypes/contract_agent/: Cargo.toml
pypes/contract_agent/src/: main.rs
pypes/pypes/: Cargo.toml
pypes/pypes/src/: fetcher.rs  main.rs  middleware.rs  wit_loader.rs  workflow.rs
pypes/pypes_analyser/: Cargo.toml
pypes/pypes_analyser/src/: lib.rs
(+4 files in other folders)
