[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
wasmtime = { version = "18.0.0", features = ["component-model"] }
wasmtime-wasi = "18.0.0"
clap = { version = "4.0", features = ["derive"] }
ical = "0.9"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
