[package]
name = "pypes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
pypes_analyser = { version = "0.1.0", path = "../pypes_analyser" }
toml = "0.9.11"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "fs"] }
wasmtime = { version = "18.0.4", features = ["component-model"] }
wasmtime-wasi = "18.0.4"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
wit-parser = "0.13"
sha2 = "0.10.9"
